syntax = "proto3";

package espressopb;

import "google/protobuf/timestamp.proto";

service Espresso {
  rpc BoilerTemperature(TemperatureStreamRequest) returns (stream TemperatureStreamResponse);
  rpc GetConfiguration (GetConfigurationRequest) returns (GetConfigurationResponse);
  rpc SetConfiguration (SetConfigurationRequest) returns (SetConfigurationResponse);
}

message TemperatureSample {
    double value = 1;
    google.protobuf.Timestamp observed_at = 2;
}

message TemperatureHistory {
    repeated TemperatureSample samples = 1;
}

message TemperatureStreamRequest {}
message TemperatureStreamResponse {
    oneof data {
        TemperatureHistory history = 1;
        TemperatureSample sample = 2;
    }
}

message GetConfigurationRequest {}

message GetConfigurationResponse {
    double temperature = 1;
    google.protobuf.Timestamp set_at = 2;
    double p = 3;
    double i = 4;
    double d = 5;
}

message SetConfigurationRequest {
    double temperature = 1;
    google.protobuf.Timestamp set_at = 2;
    double p = 3;
    double i = 4;
    double d = 5;
}

message SetConfigurationResponse {
    double temperature = 1;
    google.protobuf.Timestamp set_at = 2;
    double p = 3;
    double i = 4;
    double d = 5;
}